WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151347
REGRESSION(
r192459
): [GTK] User agent string is broken after
r192459
https://bugs.webkit.org/show_bug.cgi?id=151347
Summary
REGRESSION(r192459): [GTK] User agent string is broken after r192459
Carlos Garcia Campos
Reported
2015-11-17 04:12:32 PST
This is our UA string after
r192459
: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/USER_AGENT_GTK_MAJOR_VERSION.USER_AGENT_GTK_MINOR_VERSION (KHTML, like Gecko) Version/8.0 Safari/USER_AGENT_GTK_MAJOR_VERSION.USER_AGENT_GTK_MINOR_VERSION
Attachments
Patch
(2.77 KB, patch)
2015-11-17 04:15 PST
,
Carlos Garcia Campos
zan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2015-11-17 04:15:44 PST
Created
attachment 265673
[details]
Patch I think it's simpler to pass the values as strings.
Carlos Garcia Campos
Comment 2
2015-11-17 23:48:16 PST
Committed
r192566
: <
http://trac.webkit.org/changeset/192566
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug