REGRESSION(r192459): [GTK] User agent string is broken after r192459 https://bugs.webkit.org/show_bug.cgi?id=151347

Reviewed by Žan Doberšek.

.:

Pass UA version numbers as strings to the build.

* Source/cmake/OptionsGTK.cmake:

Source/WebCore:

Remove the incorrect macro and simply use the given values
USER_AGENT_GTK_MAJOR_VERSION and USER_AGENT_GTK_MINOR_VERSION that
are now strings.

* platform/gtk/UserAgentGtk.cpp:
(WebCore::versionForUAString):
(WebCore::buildUserAgentString):

Canonical link: https://commits.webkit.org/169537@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192566 268f45cc-cd09-0410-ab3c-d52691b4dbfc